erDiagram
    ROLES ||--o{ USERS : "assigned to"
    USERS ||--o{ PRACTICE_SESSIONS : "starts"
    USERS ||--o| LEARNER_ANALYTICS : "has"
    COURSES ||--o{ LESSONS : "contains"
    LESSONS ||--o{ PRACTICE_SESSIONS : "practiced in"
    PRACTICE_SESSIONS ||--o{ ASSESSMENTS : "produces"
    ASSESSMENTS ||--o{ FEEDBACK : "generates"

    ROLES {
        uuid id PK
        varchar name "Learner | Instructor | Trainer | Admin"
    }

    USERS {
        uuid id PK
        uuid role_id FK
        varchar full_name
        varchar email UK
        varchar password_hash
        timestamptz created_at
        timestamptz updated_at
    }

    COURSES {
        uuid id PK
        varchar name
        varchar level "Beginner | Intermediate | Advanced"
        text description
        timestamptz created_at
    }

    LESSONS {
        uuid id PK
        uuid course_id FK
        varchar letter "A-Z target sign"
        varchar title
        text description
        varchar reference_image_url
        int order_index
        timestamptz created_at
    }

    PRACTICE_SESSIONS {
        uuid id PK
        uuid user_id FK
        uuid lesson_id FK
        varchar status "in_progress | completed | abandoned"
        int attempt_count
        timestamptz started_at
        timestamptz ended_at
    }

    ASSESSMENTS {
        uuid id PK
        uuid session_id FK
        varchar predicted_sign
        numeric confidence
        varchar expected_sign
        numeric accuracy_score
        timestamptz created_at
    }

    FEEDBACK {
        uuid id PK
        uuid assessment_id FK
        varchar category "hand_shape | timing | position | motion"
        text message
        timestamptz created_at
    }

    LEARNER_ANALYTICS {
        uuid id PK
        uuid user_id FK UK
        numeric average_accuracy
        int lessons_completed
        jsonb weak_letters
        timestamptz updated_at
    }
